--- a/client/src/components/searchResult/Posts/Post.css
+++ b/client/src/components/searchResult/Posts/Post.css
@@ -1,3 +1,9 @@
 .search-page-title{
     text-transform: capitalize;
 }
+
+.flexy-bottom{
+  display:flex;
+  flex-direction: row; 
+  justify-content:space-between;
+}
