--- a/client/src/components/BannerSearch/BannerSearch.css
+++ b/client/src/components/BannerSearch/BannerSearch.css
@@ -1,191 +1,201 @@
-
-main{
-    margin-top: 60px;
+.banner {
+	background-color: #ebebeb;
+	height: calc(100vh - 60px);
+	display: flex;
+	align-items: center;
+	/* justify-content: center; */
+	text-align: center;
 }
-.banner{
-    background-color: #ebebeb;
-    height: 100vh;
-    display: flex; 
-    align-items: center;
-    /* vertical-align: middle; */
-    /* position: relative; */
-    /* width: 100%; */
-    /* display: table-cell;
-    text-align: center;
-    vertical-align: middle; */
-    
+.banner-container {
+	/* display: inline-block; */
+	/* text-align: center; */
+	/* position: absolute; */
+	/* width: 100%; */
+	/* top: 50%; */
+	/* left: 50%; */
+	/* transform: translate(-50%, -50%); */
 }
-.banner-container{
-    
-    /* display: inline-block; */
-    text-align:  center;
-    /* position: absolute; */
-    /* width: 100%; */
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
+.banner h1 {
+	font-weight: 300;
+	font-size: 36px;
 }
-.banner h1{
-    font-weight: 300;
-    font-size: 36px;
+.search-box-container {
+	margin: 40px 0;
 }
-.search-box-container{
-    margin: 40px 0;   
-    background-color: #e1e1e1;
-}
-.search-box{
-    /* display: inline-block; */
-    /* border: 1px solid #808080; */
-    padding: 16px 10px;
-    
+.search-box {
+	background-color: #e1e1e1;
+	padding: 16px;
 }
 
-
-
-.search-description{
-    text-align: left;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.6;
+.search-description {
+	text-align: left;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.6;
 }
 .search-box input,
-.search-box select{
-    font-size: 15px;
-    color: #BDBFCC;
-    border: none;
-    background-color: #e1e1e1;
-    display: inline-block;
-    width: 100%;
-
-    /* min-width: 100px; */
-} 
-
-.search-box input::placeholder{
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-    color: #bdb5b5;
-} 
-.dropdown{
-    display: block;
-    text-align: left;
+.search-box select {
+	font-size: 12px;
+	color: #bdbfcc;
+	border: none;
+	background-color: #e1e1e1;
+	display: inline-block;
+	width: 100%;
 }
-.dropbtn{
-    padding: 0;
-    background-color: #e1e1e1;
-    color: #bdb5b5;
+
+.search-box input::placeholder {
+	font-family: 'Roboto', sans-serif;
+	font-size: 12px;
+	color: #bdb5b5;
+}
+.dropdown {
+	display: block;
+	text-align: left;
+}
+.dropbtn {
+	font-family: 'Roboto', sans-serif;
+	font-size: 12px;
+	padding: 0;
+	background-color: #e1e1e1;
+	color: #bdb5b5;
 }
 .dropbtn:hover,
 .dropbtn:active,
-.dropbtn:focus{
-    background-color: #e1e1e1;
-    outline: none;
+.dropbtn:focus {
+	background-color: #e1e1e1;
+	outline: none;
 }
-.banner input[type = "submit"]{
-    display: inline-block;
-    padding: 13px 38px;
-    background-color: #e1e1e1;
-    border: none;
-    border-radius: 10px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #bdb5b5;
-   
+.banner input[type='submit'] {
+	display: inline-block;
+	padding: 13px 38px;
+	background-color: #e1e1e1;
+	border: none;
+	border-radius: 10px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	color: #bdb5b5;
 }
-.banner input[type = "submit"]:hover,
-.banner input[type = "submit"]:active{
-    color: #000;
-    cursor: pointer;
+.banner input[type='submit']:hover,
+.banner input[type='submit']:active {
+	color: #000;
+	cursor: pointer;
 }
 .search-box input:focus,
 .search-box select:focus,
-.banner input[type = "submit"]{
-    outline: none;
+.banner input[type='submit'] {
+	outline: none;
 }
 .banner ._2iA8p44d0WZ-WqRBGcAuEV {
-    border: none;
-    border-radius: none;
-    padding: 0px;
-    
+	border: none;
+	border-radius: none;
+	padding: 0px;
 }
 /*----------mapbox-----------*/
-.banner .mapboxgl-ctrl-geocoder{
-    box-shadow: none;
-    min-width: 100%;
+.banner .mapboxgl-ctrl-geocoder {
+	box-shadow: none;
+	min-width: 100%;
 }
 .search-box .mapboxgl-ctrl-geocoder--input {
-    height: 20px;
-
+	height: 20px;
 }
 .search-box .mapboxgl-ctrl-geocoder--icon-search {
-    left: 7px;
-    top: 1px;
-  
+	left: 7px;
+	top: 1px;
 }
-
 
 /*-----------Latest Posts-----------*/
 
-.post-card-img-container{
-    height: 200px;
+.post-card-img-container {
+	/* height: 200px; */
 }
-.post-card img{
-  width:100%;
-  height:200px;
-  object-fit: fill;
+.post-card img {
+	width: 100%;
+	max-height: 156px;
+	/* height: 200px; */
+	object-fit: fill;
 }
 
 /* My CSS for recent contents*/
 
-.recent{
-    background-color: #ebebeb;
-    padding: 36px 0;
-    
+.recent {
+	background-color: #ebebeb;
+	padding: 36px 0;
 }
 
-.recent h3{
-    margin: 36px 0;
-    position: relative;
+.recent h3 {
+	margin: 36px 0;
+	position: relative;
 }
-.recent h3::after{
-    content: ' ';
-    position: absolute;
-    bottom: -8px;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: rgba(0, 0, 0, 0.1);
+.recent h3::after {
+	content: ' ';
+	position: absolute;
+	bottom: -8px;
+	left: 0;
+	width: 100%;
+	height: 3px;
+	background-color: rgba(0, 0, 0, 0.1);
 }
-.post-card{
-    padding: 8px;
-    transition: 0.3s all ease-in-out;
+.post-card {
+	padding: 8px;
+	transition: 0.3s all ease-in-out;
 }
 .post-card:hover,
-.post-card:active{
-    cursor: pointer;
-    opacity: 0.9;
-    box-shadow: 0 2px 10px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.26);
+.post-card:active {
+	cursor: pointer;
+	opacity: 0.9;
+	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16),
+		0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
-.recent-content-item{
-    /* margin-bottom: 4px; */
-    text-align: center;
-    margin-top: 4px;
+.recent-content-item {
+	/* margin-bottom: 4px; */
+	text-align: center;
+	margin-top: 4px;
 }
-.recent-content-title{
-    
-    margin-top : 8px;
-    font-size: 12px;
-    font-weight: 400;
-    text-transform: uppercase;
+.recent-content-title {
+	margin-top: 8px;
+	font-size: 12px;
+	font-weight: 400;
+	text-transform: uppercase;
 }
 
 .recent-content-location,
-.recent-content-price{
-    font-size: 12px;
-    font-weight: 600;
+.recent-content-price {
+	font-size: 12px;
+	font-weight: 600;
 }
-.recent-content-price{
-    margin-top: 0;
+.recent-content-price {
+	margin-top: 0;
 }
 
+/*Media queries*/
 
+/* Large Devices, Wide Screens */
+@media only screen and (max-width: 1200px) {
+}
 
+/* Medium Devices, Desktops */
+@media only screen and (max-width: 991px) {
+	.search-box {
+	}
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width: 767px) {
+}
+/*Small devices*/
+@media only screen and (max-width: 575px) {
+	.post-card img {
+		padding: 8px 32px;
+		max-height: 100%;
+		/* height: auto; */
+		/* object-fit: fill; */
+	}
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 479px) {
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width: 319px) {
+}
