--- a/client/src/components/FilterBar/FilterBar.css
+++ b/client/src/components/FilterBar/FilterBar.css
@@ -1,64 +1,64 @@
-.filter-bar-section{
-   width: 100%;
-   position: fixed;
-   top:60px;
-   background-color:#e1e1e1;
-   height: 40px;
-   z-index: 100;
-   
+.filter-bar-section {
+	width: 100%;
+	position: fixed;
+	top: 60px;
+	background-color: #e1e1e1;
+	height: 40px;
+	z-index: 100;
+	display: flex;
+	align-items: center;
 }
-.filter-bar-contents{
-    display: flex;
-    height: 100%;
-    justify-content: flex-start;
-    align-items: center;
-    height: 40px;
-}
-
-.filter-bar-content label{
-    /* vertical-align: middle; */
-}
-.filter-bar-content label{
-    display: inline-block;
-    padding: 0 8px;
-    margin-bottom: 0;
+.filter-bar-contents {
+	display: flex;
+	height: 100%;
+	justify-content: flex-start;
+	align-items: center;
+	/* height: 40px; */
 }
 
-.filter-bar-content label input{
-    display: inline-block;
-    width: 100%;
-    padding: 5px 0 5px 4px;
-    border: none;
-    outline: none;
-    font-size: 12px;
+.filter-bar-content label {
+	/* vertical-align: middle; */
 }
-.filter-bar-content label input::placeholder{
-    font-size: 12px;
-    padding-left: 4px;
-
-}
-.filter-bar-content select{
-    padding: 4px ;
-    outline: none;
-}
-.filter-bar-contents label input[type = 'number']::-webkit-outer-spin-button,
-.filter-bar-contents label input[type = 'number']::-webkit-inner-spin-button{
-    -webkit-appearance: none;
-    margin: 0;
+.filter-bar-content label {
+	display: inline-block;
+	padding: 0 8px;
+	margin-bottom: 0;
 }
 
-.btn-filter{
-    margin-left: 8px;
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 500;
-    background-color:#b7b7b7;
-    padding: 2px 12px;
-    border-radius: 4px;
-    transition: all 0.3s ease-in-out;
+.filter-bar-content label input {
+	display: inline-block;
+	width: 100%;
+	padding: 5px 0 5px 4px;
+	border: none;
+	outline: none;
+	font-size: 12px;
+}
+.filter-bar-content label input::placeholder {
+	font-size: 12px;
+	padding-left: 4px;
+}
+.filter-bar-content select {
+	padding: 4px;
+	outline: none;
+}
+.filter-bar-contents label input[type='number']::-webkit-outer-spin-button,
+.filter-bar-contents label input[type='number']::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+.btn-filter {
+	margin-left: 8px;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: 500;
+	background-color: #b7b7b7;
+	padding: 2px 12px;
+	border-radius: 4px;
+	transition: all 0.3s ease-in-out;
 }
 .btn-filter:hover,
-.btn-filter:active{
-    background-color: #fff;
-    color: #000;
+.btn-filter:active {
+	background-color: #fff;
+	color: #000;
 }
