--- a/client/src/components/FormContainer/ResetPassword/ResetPassword.css
+++ b/client/src/components/FormContainer/ResetPassword/ResetPassword.css
@@ -1,15 +1,21 @@
-.reset-password-container{
-  margin:0 auto;
-  height:100vh;
-  width:40%;
+.reset-password-container {
+	height: calc(100vh - 124px);
+
+	/* width: 100%; */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/* text-align: center; */
+}
+.reset-password-container form {
+	width: 50%;
 }
 
-
-.btn-flex-container{
-  display:flex;
-  justify-content:space-between;
+.btn-flex-container {
+	display: flex;
+	justify-content: center;
 }
 
-.spinner{
-  height: 20px;
+.spinner {
+	height: 20px;
 }
