--- a/client/src/components/Profile/PostNotification/PostNotification.css
+++ b/client/src/components/Profile/PostNotification/PostNotification.css
@@ -1,8 +1,84 @@
-form{
-  margin-top:100px;
-  height:500px;
+.post-notification {
+	height: calc(100vh - 124px);
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+}
+.post-notification-content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+#post-notification-form {
+	/* background-color: #f8f8f8; */
+	color: #4c4c4c;
+	/* padding:  32px; */
+	/* width: 40%; */
+	width: 400px;
+	max-width: 100%;
+}
+.room-type {
+	text-align: center;
+	margin-bottom: 16px;
+}
+.room-type label {
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	font-family: inherit;
+	font-size: 20px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-weight: 600;
+	margin-bottom: 8px;
+
+	/* margin-top: 16px;
+	margin-right: 16px; */
+}
+.room-type select {
+	color: #4c4c4c;
+	display: inline-block;
+	width: 100%;
+	/* max-width: 100%; */
+	font-family: inherit;
+	font-size: 15px;
+	font-weight: 600;
+	padding: 10px 26px;
+	box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+.location {
+	margin-bottom: 32px;
+}
+.location label {
+	display: inline-block;
+	width: 100%;
+	font-family: inherit;
+	font-size: 20px;
+	font-weight: 600;
+	text-transform: uppercase;
+	text-align: center;
+	margin-bottom: 8px;
 }
 
-.location{
-  display:flex;
+#location .mapboxgl-ctrl-geocoder.mapboxgl-ctrl {
+	border-radius: 0;
+	width: 100%;
+	max-width: 100%;
+}
+.btn-content input[type='submit'] {
+	padding: 8px 32px;
+	background-color: #444;
+	text-transform: uppercase;
+	font-size: 16px;
+	letter-spacing: 0.5px;
+	font-family: inherit;
+	font-weight: 700;
+	color: #fff;
+	transition: 0.3s all ease-in-out;
+}
+.btn-content input[type='submit']:hover,
+.btn-content input[type='submit']:active {
+	cursor: pointer;
+	background-color: #b7b7b7;
 }
