--- a/client/src/components/searchResult/SearchResult.css
+++ b/client/src/components/searchResult/SearchResult.css
@@ -1,22 +1,22 @@
-.search-page{
-    background-color: #ebebeb;
+.search-page {
+	background-color: #ebebeb;
 }
-.search-page-contents{
-    margin-top: 100px;
-    padding: 16px 0;
-    height: 100vh;
-    overflow-y: scroll;
+.search-page-contents {
+	/* margin-top: 100px; */
+	padding: 16px 0;
+	height: 100vh;
+	overflow-y: scroll;
 }
-.search-page-contents::-webkit-scrollbar{
-    display: none;
+.search-page-contents::-webkit-scrollbar {
+	display: none;
 }
-.search-page-content{
-    background-color: #f1f1f1;
-    padding: 16px;
-    margin: 16px 0;
+.search-page-content {
+	background-color: #f1f1f1;
+	padding: 16px;
+	margin: 16px 0;
 }
 
-.search-page-image img{
-    display: inline-block;
-    max-width: 100%;
+.search-page-image img {
+	display: inline-block;
+	max-width: 100%;
 }
