--- a/client/src/components/BannerSearch/BannerSearch.css
+++ b/client/src/components/BannerSearch/BannerSearch.css
@@ -6,24 +6,20 @@
 	/* justify-content: center; */
 	text-align: center;
 }
-.banner-container {
-	/* display: inline-block; */
-	/* text-align: center; */
-	/* position: absolute; */
-	/* width: 100%; */
-	/* top: 50%; */
-	/* left: 50%; */
-	/* transform: translate(-50%, -50%); */
-}
+
 .banner h1 {
 	font-weight: 300;
 	font-size: 36px;
 }
 .search-box-container {
-	margin: 40px 0;
+	margin: 40px auto;
+	/* width: 900px; */
+	/* max-width: 100%; */
+	background-color: #e1e1e1;
+	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 .search-box {
-	background-color: #e1e1e1;
+	/* background-color: #e1e1e1; */
 	padding: 16px;
 }
 
@@ -32,13 +28,17 @@
 	font-size: 16px;
 	font-weight: 500;
 	line-height: 1.6;
+	/* margin-top: 8px; */
 }
 .search-box input,
 .search-box select {
 	font-size: 12px;
-	color: #bdbfcc;
+	color: #000;
 	border: none;
-	background-color: #e1e1e1;
+	padding: 4px 8px;
+	border-radius: 2px;
+	background-color: #ebebeb;
+	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 	display: inline-block;
 	width: 100%;
 }
@@ -46,7 +46,10 @@
 .search-box input::placeholder {
 	font-family: 'Roboto', sans-serif;
 	font-size: 12px;
-	color: #bdb5b5;
+	color: #000;
+}
+.search-box-content {
+	margin-top: 8px;
 }
 .dropdown {
 	display: block;
@@ -54,10 +57,15 @@
 }
 .dropbtn {
 	font-family: 'Roboto', sans-serif;
+	text-align: left;
 	font-size: 12px;
-	padding: 0;
-	background-color: #e1e1e1;
-	color: #bdb5b5;
+	width: 100%;
+	padding: 4px 8px;
+	border-radius: 2px;
+	background-color: #ebebeb;
+	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+	/* background-color: #fff; */
+	color: #000;
 }
 .dropbtn:hover,
 .dropbtn:active,
@@ -68,27 +76,35 @@
 .banner input[type='submit'] {
 	display: inline-block;
 	padding: 13px 38px;
-	background-color: #e1e1e1;
+	text-transform: uppercase;
+	background-color: rgb(151, 144, 144);
 	border: none;
 	border-radius: 10px;
+	letter-spacing: 1px;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	color: #bdb5b5;
+	color: #fff;
+	transition: all ease-in-out 0.3s;
 }
 .banner input[type='submit']:hover,
 .banner input[type='submit']:active {
-	color: #000;
+	/* color: #000; */
 	cursor: pointer;
+	background-color: rgb(104, 100, 100);
+	/* outline: auto; */
 }
 .search-box input:focus,
 .search-box select:focus,
 .banner input[type='submit'] {
 	outline: none;
 }
+/*!facilities*/
 .banner ._2iA8p44d0WZ-WqRBGcAuEV {
 	border: none;
-	border-radius: none;
 	padding: 0px;
+}
+.banner ._3vt7_Mh4hRCFbp__dFqBCI input {
+	margin-top: 0;
 }
 /*----------mapbox-----------*/
 .banner .mapboxgl-ctrl-geocoder {
@@ -96,11 +112,16 @@
 	min-width: 100%;
 }
 .search-box .mapboxgl-ctrl-geocoder--input {
-	height: 20px;
+	height: 25px;
+	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+
+	/* box-shadow: none; */
+}
+.search-box .mapboxgl-ctrl-geocoder--input::placeholder {
+	color: #000;
 }
 .search-box .mapboxgl-ctrl-geocoder--icon-search {
-	left: 7px;
-	top: 1px;
+	visibility: hidden;
 }
 
 /*-----------Latest Posts-----------*/
@@ -161,6 +182,7 @@
 .recent-content-location,
 .recent-content-price {
 	font-size: 12px;
+	/* color: #000; */
 	font-weight: 600;
 }
 .recent-content-price {
