--- a/client/src/components/Profile/UserInfo/UserInfo.css
+++ b/client/src/components/Profile/UserInfo/UserInfo.css
@@ -1,14 +1,27 @@
-.user-info-container{
-  margin:0 auto;
-  height:100vh;
-  width:70%;
+.user-info-container {
+	margin: 0 auto;
+	height: 100vh;
+	width: 70%;
+	padding: 16px 0;
+	/* text-align: center; */
 }
-
-.user-info-container{
-  padding: 16px 0;
+#user-info-btn-container {
+	text-align: center;
 }
-
-.notifier-flex{
-  display:flex;
-  justify-content:space-between;
+#user-info-notification {
+	margin-top: 16px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.user-info-container .delete-notifier {
+	color: #fff;
+	background-color: red;
+	padding: 8px 12px;
+	border-radius: 4px;
+	transition: all ease-in-out 0.3s;
+}
+.user-info-container .delete-notifier:hover,
+.user-info-container .delete-notifier:active {
+	background-color: rgb(175, 24, 24);
 }
